added git ingore and half of lawyer card

--- a/index.html
+++ b/index.html
@@ -14,9 +14,62 @@
         width="3"
         height="3"></a-image>
 
+      <!-- Lawyer Card-->
+    <a-box position="-29 1.40 -15">
+      <a-image
+            src='public/images/lawyers/lance_palmer.jpg'
+            height="2"
+            width="2"
+            rotation="0 0 0"
+            position="0 4 0"
+          ></a-image>
 
-    <!-- SPAWN POINT -->
+          <a-text
+            anchor="left"
+            align="left"
+            value= "Lance Palmer"
+            color="white"
+            position="-.99 2.8 0"
+          ></a-text>
 
+          <a-image
+            src='public/images/star.png'
+            position="-.85 2.5 0"
+            width=".35"
+            height=".35"
+            ></a-image>
+          <a-image
+            src='public/images/star.png'
+            position="-.50 2.5 0"
+            width=".35"
+            height=".35"
+            ></a-image>
+          <a-image
+            src='public/images/star.png'
+            position="-.15 2.5 0"
+            width=".35"
+            height=".35"
+            ></a-image>
+          <a-image
+            src='public/images/star.png'
+            position=".20 2.5 0"
+            width=".35"
+            height=".35"
+            ></a-image>
+          <a-image
+            src='public/images/star.png'
+            position=".55 2.5 0"
+            width=".35"
+            height=".35"
+            ></a-image>
+
+
+
+
+
+    </a-box>
+
+            <!-- SPAWN POINT -->
      <a-entity camera gamepad-controls position="-22 1.25 -9"></a-entity>
 
      <div id="lawyer-list"></div>
