--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
      <a-cylinder position="10 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
 
 
+     <a-assets>
+       <a-asset-item id="islands" src="./public/models/fantasy_islands/scene.gltf"></a-asset-item>
+     </a-assets>
+     <a-entity gltf-model="#head"></a-entity>
+
      <div id="lawyer-list"></div>
 
      <a-gltf-model src="./public/models/fantasy_islands/scene.gltf"></a-gltf-model>
