--- a/index.html
+++ b/index.html
@@ -118,10 +118,39 @@
 
     <a-image
        src='public/images/bear/bear1.png'
-       position="-22 1.40 -15"
+       position="-182 208 -183"
        rotation="0 0 0"
-       width="3"
-       height="3"></a-image>
+       width="10"
+       height="10"></a-image>
+
+     <a-image
+        src='public/images/bear/bear1.png'
+        position="-189 208 -227"
+        rotation="0 0 0"
+        width="10"
+        height="10"></a-image>
+
+    <a-image
+       src='public/images/bear/bear1.png'
+       position="-150 208 -218"
+       rotation="0 0 0"
+       width="10"
+       height="10"></a-image>
+
+       <a-image
+          src='public/images/bear/bear1.png'
+          position="-165 208 -174"
+          rotation="0 0 0"
+          width="10"
+          height="10"></a-image>
+
+
+          <a-image
+             src='public/images/bear/bear1.png'
+             position="-169 208 -211"
+             rotation="0 0 0"
+             width="10"
+             height="10"></a-image>
 
 
    </a-scene>
