added some lawyer cards and billboards

--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
         width="3"
         height="3"></a-image>
 
+        <a-image
+           src='public/images/bear/bear1.png'
+           position="114.390 1.453 24.322"
+           rotation="0 -115.560 0"
+           width="3"
+           height="3"></a-image>
+
       <!-- Lawyer Card-->
-    <a-box position="-29 1.40 -15">
+  <a-entity position="-29 1.40 -16" geometry="primitive: plane; height: 10.5; width: 7;" material="color: black;">
       <a-image
             src='public/images/lawyers/lance_palmer.jpg'
             height="2"
             width="2"
             rotation="0 0 0"
-            position="0 4 0"
+            position="0 4 0.01"
           ></a-image>
 
           <a-text
@@ -29,45 +36,237 @@
             align="left"
             value= "Lance Palmer"
             color="white"
-            position="-.99 2.8 0"
+            position="-.87 2.8 0"
           ></a-text>
 
+          <a-text
+          align="center"
+          value="Unlike most personal injury lawyers, for almost 30 years I've only represented injury victims. I have tried many cases, big and small, and I'm not afraid to go to court to get justice when insurance companies refuse to pay. I have won 7 and 8 figure settlements and verdicts for several clients. Every case is as important to me as it is to each of my clients. Since most lawyers charge the same 33.33% contingent fee, personal injury victims should hire a lawyer with experience and a proven track record."
+          position=".06 1 0"><a-text>
+
           <a-image
             src='public/images/star.png'
-            position="-.85 2.5 0"
+            position="-.90 1.5 0.01"
             width=".35"
             height=".35"
             ></a-image>
           <a-image
             src='public/images/star.png'
-            position="-.50 2.5 0"
+            position="-.55 1.5 0.01"
             width=".35"
             height=".35"
             ></a-image>
           <a-image
             src='public/images/star.png'
-            position="-.15 2.5 0"
+            position="-.20 1.5 0.01"
             width=".35"
             height=".35"
             ></a-image>
           <a-image
             src='public/images/star.png'
-            position=".20 2.5 0"
+            position=".15 1.5 0.01"
             width=".35"
             height=".35"
             ></a-image>
           <a-image
             src='public/images/star.png'
-            position=".55 2.5 0"
+            position=".50 1.5 0.01"
             width=".35"
             height=".35"
             ></a-image>
+    </a-entity>
+
+    <a-entity position="127.538 1.608 -0.456" rotation="0 -71.490 0" geometry="primitive: plane; height: 10.5; width: 7;" material="color: black;">
+        <a-image
+              src='public/images/lawyers/lance_palmer.jpg'
+              height="2"
+              width="2"
+              rotation="0 0 0"
+              position="0 4 0.01"
+            ></a-image>
+
+            <a-text
+              anchor="left"
+              align="left"
+              value= "Lance Palmer"
+              color="white"
+              position="-.87 2.8 0"
+            ></a-text>
+
+            <a-text
+            align="center"
+            value="Unlike most personal injury lawyers, for almost 30 years I've only represented injury victims. I have tried many cases, big and small, and I'm not afraid to go to court to get justice when insurance companies refuse to pay. I have won 7 and 8 figure settlements and verdicts for several clients. Every case is as important to me as it is to each of my clients. Since most lawyers charge the same 33.33% contingent fee, personal injury victims should hire a lawyer with experience and a proven track record."
+            position=".06 1 0"><a-text>
+
+            <a-image
+              src='public/images/star.png'
+              position="-.90 1.5 0.01"
+              width=".35"
+              height=".35"
+              ></a-image>
+            <a-image
+              src='public/images/star.png'
+              position="-.55 1.5 0.01"
+              width=".35"
+              height=".35"
+              ></a-image>
+            <a-image
+              src='public/images/star.png'
+              position="-.20 1.5 0.01"
+              width=".35"
+              height=".35"
+              ></a-image>
+            <a-image
+              src='public/images/star.png'
+              position=".15 1.5 0.01"
+              width=".35"
+              height=".35"
+              ></a-image>
+            <a-image
+              src='public/images/star.png'
+              position=".50 1.5 0.01"
+              width=".35"
+              height=".35"
+              ></a-image>
+      </a-entity>
+
+      <a-entity position="128 1.40 15.11" rotation="0 -71.490 0" geometry="primitive: plane; height: 10.5; width: 7;" material="color: black;">
+          <a-image
+                src='public/images/lawyers/lance_palmer.jpg'
+                height="2"
+                width="2"
+                rotation="0 0 0"
+                position="0 4 0.01"
+              ></a-image>
+
+              <a-text
+                anchor="left"
+                align="left"
+                value= "Lance Palmer"
+                color="white"
+                position="-.87 2.8 0"
+              ></a-text>
+
+              <a-text
+              align="center"
+              value="Unlike most personal injury lawyers, for almost 30 years I've only represented injury victims. I have tried many cases, big and small, and I'm not afraid to go to court to get justice when insurance companies refuse to pay. I have won 7 and 8 figure settlements and verdicts for several clients. Every case is as important to me as it is to each of my clients. Since most lawyers charge the same 33.33% contingent fee, personal injury victims should hire a lawyer with experience and a proven track record."
+              position=".06 1 0"><a-text>
+
+              <a-image
+                src='public/images/star.png'
+                position="-.90 1.5 0.01"
+                width=".35"
+                height=".35"
+                ></a-image>
+              <a-image
+                src='public/images/star.png'
+                position="-.55 1.5 0.01"
+                width=".35"
+                height=".35"
+                ></a-image>
+              <a-image
+                src='public/images/star.png'
+                position="-.20 1.5 0.01"
+                width=".35"
+                height=".35"
+                ></a-image>
+              <a-image
+                src='public/images/star.png'
+                position=".15 1.5 0.01"
+                width=".35"
+                height=".35"
+                ></a-image>
+              <a-image
+                src='public/images/star.png'
+                position=".50 1.5 0.01"
+                width=".35"
+                height=".35"
+                ></a-image>
+        </a-entity>
 
 
 
+  <!--Billboard-->
+   <a-image src='public/images/billboard.png' position="-8.877 3.830 -30.801" height="10"
+   width="15" >
+       <a-image
+             src='public/images/lawyers/saul.jpg'
+             height="2"
+             width="2"
+             rotation="0 0 0"
+             position="-2.7 1.9 0.01"
+       ></a-image>
+       <a-image
+             src='public/images/pro.png'
+             height="1.5"
+             width="1.5"
+             rotation="0 0 0"
+             position="4.2 2.1 0.01"
+       ></a-image>
 
+       <a-text
+         anchor="left"
+         align="left"
+         value= "Saul Goodman"
+         color="black"
+         width="13"
+         position="-1.6 2.6 0.01"
+       ></a-text>
 
-    </a-box>
+       <a-text
+         align="center"
+         height="1.5"
+         width="9"
+         value= "BETTER CALL SAUL"
+         color="black"
+         position="1 1 0.01"
+       ></a-text>
+       <a-text
+         align="center"
+         height="1.5"
+         width="9"
+         value= "555-867-5309"
+         color="black"
+         position=".90 0.5 0.01"
+       ></a-text>
+     </a-image>
+
+     <a-image src='public/images/billboard.png' position="29.768 3.830 -30.801" rotation="0 -41.290 0" height="10"
+     width="15" >
+         <a-image
+               src='public/images/lawyers/crystal_rutherford.jpg'
+               height="2"
+               width="2"
+               rotation="0 0 0"
+               position="-2.7 1.9 0.01"
+         ></a-image>
+         <a-image
+               src='public/images/pro.png'
+               height="1.5"
+               width="1.5"
+               rotation="0 0 0"
+               position="4.2 2.1 0.01"
+         ></a-image>
+
+         <a-text
+           anchor="left"
+           align="left"
+           value= "Crystal Rutherford"
+           color="black"
+           width="13"
+           position="-1.6 2.6 0.01"
+         ></a-text>
+
+         <a-text
+           align="center"
+           height="1.5"
+           width="9"
+           value= "I DA BEST IN DA BIZ!"
+           color="black"
+           position="1 1 0.01"
+         ></a-text>
+       </a-image>
+
 
             <!-- SPAWN POINT -->
      <a-entity camera gamepad-controls position="-22 1.25 -9"></a-entity>
@@ -77,8 +276,7 @@
      <!-- Island -->
      <a-gltf-model src="./public/models/fantasy_islands/scene.gltf"></a-gltf-model>
 
-     <a-plane position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="#7BC8A4"></a-plane>
-     <a-sky color="#ECECEC"></a-sky>
+     <a-sky color="salmon"></a-sky>
    </a-scene>
  </body>
 </html>
